styled the main header and related posts somewhat

--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -5,6 +5,7 @@ h4,
 p,
 li {
   font-family: sans-serif;
+  color: #444;
 }
 
 h1,
@@ -49,6 +50,16 @@ li {
 /* article header p {
   font-style: italic;
 } */
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+}
 
 #author {
   font-style: italic;
