added body but with no styling for now

--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -50,6 +50,9 @@ li {
 /* article header p {
   font-style: italic;
 } */
+body {
+  /* background-color: blue; */
+}
 
 aside {
   background-color: #f7f7f7;
