--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -48,6 +48,14 @@ li:first-child {
   font-weight: bold;
 }
 
+li:last-child {
+  font-style: italic;
+}
+
+li:nth-child(2) {
+  color: red;
+}
+
 /* footer p {
   font-size: 16px;
 } */
