--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -52,8 +52,9 @@ li:last-child {
   font-style: italic;
 }
 
-li:nth-child(2) {
-  color: red;
+/* can use numbers or odd or even */
+li:nth-child(even) {
+  /* color: red; */
 }
 
 /* footer p {
@@ -65,6 +66,10 @@ li:nth-child(2) {
 } */
 body {
   /* background-color: blue; */
+}
+
+article p:last-child {
+  color: red;
 }
 
 aside {
