understanding theory behind selectors

--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -125,3 +125,20 @@ aside {
 #copyright {
   font-size: 16px;
 }
+
+/* Resolving conflicts */
+#copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green;
+}
