--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -126,8 +126,8 @@ aside {
   font-size: 16px;
 }
 
-/* Resolving conflicts */
-#copyright {
+/* Resolving conflicts id > class > element */
+/* #copyright {
   color: red;
 }
 
@@ -141,4 +141,4 @@ aside {
 
 footer p {
   color: green !important;
-}
+} */
