--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -1,6 +1,8 @@
-/* * {
-
-} */
+/* Global Reset */
+* {
+ margin: 0;
+ padding: 0;
+}
 
 body {
   color: #444;
@@ -14,12 +16,18 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
+  margin-bottom: 40px;
+}
+
+.post-header {
+  margin-bottom: 40px;
 }
 
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
+  padding: 50px 0;
 }
 
 h1,
@@ -36,6 +44,7 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
