--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -10,6 +10,14 @@ body {
   border-top: 10px solid #1098ad;
 }
 
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
 .main-header {
   background-color: #f7f7f7;
   /* padding: 20px;
@@ -49,6 +57,8 @@ h2 {
 
 h3 {
   font-size: 30px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 h4 {
@@ -60,6 +70,13 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.2;
+  margin-bottom: 15px;
+}
+
+ul, 
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
@@ -154,7 +171,3 @@ article p:first-child {
 footer p {
   color: green !important;
 } */
-
-nav {
-  font-size: 18px;
-}
