--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -25,6 +25,7 @@ article {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 40px;
+  height: 80px;
 }
 
 .post-header {
@@ -36,6 +37,7 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -118,6 +120,11 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+
+.post-img {
+  width: 100%;
+  height: auto;
 }
 
 /* footer p {
