--- a/HTML-Challenge/style.css
+++ b/HTML-Challenge/style.css
@@ -1,12 +1,22 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
 }
 
+.container {
+  width: 825px;
+  margin: 0px auto;
+}
+
 /* PRODUCT */
 
 .product {
-  border: 10px solid black;
+  border: 5px solid black;
 }
 
 .product-title {
@@ -14,6 +24,7 @@ body {
   text-align: center;
   font-size: 22px;
   text-transform: uppercase;
+  padding: 15px 0;
 }
 
 .price {
@@ -23,9 +34,21 @@ body {
 .shipping {
   text-transform: uppercase;
   color: #777;
+  margin-bottom: 15px;
+}
+
+.description {
+  margin-bottom: 15px;
 }
 
 /* LINK INFO */
+.more-info-container {
+  margin-bottom: 20px;
+}
+
+.more-info {
+  margin-bottom: 15px;
+}
 
 .more-info:link, .more-info:visited {
   color: black;
@@ -39,10 +62,21 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 15px;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+li {
+  margin-bottom: 5px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
 
 /* BUTTON */
@@ -53,6 +87,9 @@ body {
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+  width: 100%;
+  height: 35px;
+  border-top: black 3px solid;
 }
 
 .add-cart:hover {
