changing nav links to inline block elements

--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -45,6 +45,7 @@ aside {
   margin: 0 auto;
 }
 
+/* SMALLER ELEMENTS */
 h1,
 h2,
 h3 {
@@ -130,6 +131,20 @@ a:active {
 .post-img {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
 }
 
 /* footer p {
