--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -146,6 +146,15 @@ nav a:link:last-child {
   margin-right: 0;
 }
 
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
 /* footer p {
   font-size: 16px;
 } */
