--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -8,6 +8,7 @@ body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
@@ -151,8 +152,8 @@ button {
   padding: 20px;
   cursor: pointer;
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 50px;
+  right: 50px;
 }
 
 /* footer p {
