psuedo elements for first letter and adjacent elements

--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -156,6 +156,19 @@ button {
   right: 50px;
 }
 
+/* Psuedo Elements use :: */
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+/* How to target adjacent sibling elements */
+/* h3 + p::first-line {
+  color: red;
+} */
+
+
+
 /* footer p {
   font-size: 16px;
 } */
