--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -167,7 +167,22 @@ h1::first-letter {
   color: red;
 } */
 
+h2 {
+  position: relative;
+}
 
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #000;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -15px;
+}
 
 /* footer p {
   font-size: 16px;
