commented out css rule fully to clear out problems

--- a/HTML-Markup/style.css
+++ b/HTML-Markup/style.css
@@ -104,9 +104,9 @@ li:last-child {
 }
 
 /* can use numbers or odd or even */
-li:nth-child(even) {
-  /* color: red; */
-}
+/* li:nth-child(even) {
+  color: red;
+} */
 
 /* Styling Links */
 a:link {
