--- a/HTML-Challenge/style.css
+++ b/HTML-Challenge/style.css
@@ -14,6 +14,7 @@ body {
   border: 4px solid black;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 
 .product-title {
@@ -36,6 +37,20 @@ body {
   margin-bottom: 15px;
 }
 
+.sale {
+  background-color: #ec2f2f;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding: 7px 15px;
+  display: inline-block;
+  position: absolute;
+  top: -17px;
+  left: -26px;
+}
+
 .description {
   margin-bottom: 15px;
 }
@@ -55,6 +70,32 @@ body {
 
 .more-info:hover, more-info:active {
   text-decoration: none;
+}
+
+.color {
+  background-color: #000;
+  height: 22px;
+  width: 22px;
+}
+
+.color-blue {
+  background-color: #2f6ee2;
+}
+
+.color-red {
+  background-color: red;
+}
+
+.color-yellow {
+  background-color: yellow;
+}
+
+.color-green {
+  background-color: green;
+}
+
+.color-brown {
+  background-color: brown;
 }
 
 /* PRODUCT DETAILS */
