turned colors into inline-blocks and gave em spacing on the right and bottom

--- a/HTML-Challenge/style.css
+++ b/HTML-Challenge/style.css
@@ -72,10 +72,16 @@ body {
   text-decoration: none;
 }
 
+.colors {
+  margin-bottom: 20px;
+}
+
 .color {
   background-color: #000;
   height: 22px;
   width: 22px;
+  display: inline-block;
+  margin-right: 5px;
 }
 
 .color-blue {
