--- a/CSS-Layouts/style.css
+++ b/CSS-Layouts/style.css
@@ -236,3 +236,23 @@ article p:first-child {
 footer p {
   color: green !important;
 } */
+
+/* FLOATS */
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.author {
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
