--- a/CSS-Layouts/Float-Layout/style.css
+++ b/CSS-Layouts/Float-Layout/style.css
@@ -42,8 +42,8 @@ aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
+  box-sizing: border-box;
 }
 
 /* SMALLER ELEMENTS */
@@ -209,6 +209,7 @@ article p:first-child {
 
 .related {
   list-style: none;
+  margin-left: 0;
 }
 
 .related-author {
