--- a/CSS-Layouts/Float-Layout/style.css
+++ b/CSS-Layouts/Float-Layout/style.css
@@ -2,6 +2,7 @@
 * {
  margin: 0;
  padding: 0;
+ box-sizing: border-box;
 }
 
 body {
@@ -23,7 +24,7 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 40px;
-  height: 40px;
+  height: 70px;
 }
 
 nav {
@@ -43,7 +44,6 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   padding: 50px 40px;
-  box-sizing: border-box;
 }
 
 /* SMALLER ELEMENTS */
@@ -74,6 +74,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
