--- a/HTML-Challenge/style.css
+++ b/HTML-Challenge/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -18,11 +19,28 @@ body {
 }
 
 .product-title {
-  background-color: #777;
+  background-color: rgb(165, 165, 165);
   text-align: center;
   font-size: 22px;
   text-transform: uppercase;
   padding: 15px 0;
+}
+
+.converse {
+  float: left;
+}
+
+.product-info {
+  margin-top: 15px;
+  margin-left: 30px;
+  float: left;
+  width: 275px;
+}
+
+.product-details {
+  margin-top: 15px;
+  float: left;
+  width: 225px;
 }
 
 .price {
@@ -31,7 +49,7 @@ body {
 }
 
 .shipping {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   text-transform: uppercase;
   color: #777;
