--- a/CSS-Layouts/Flex-Layout/style.css
+++ b/CSS-Layouts/Flex-Layout/style.css
@@ -2,6 +2,7 @@
 * {
  margin: 0;
  padding: 0;
+ box-sizing: border-box;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -23,7 +24,7 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 40px;
-  height: 80px;
+  height: 70px;
 }
 
 nav {
@@ -42,8 +43,7 @@ aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
 }
 
 /* SMALLER ELEMENTS */
@@ -74,6 +74,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -209,6 +210,7 @@ article p:first-child {
 
 .related {
   list-style: none;
+  margin-left: 0;
 }
 
 .related-author {
@@ -236,3 +238,37 @@ article p:first-child {
 footer p {
   color: green !important;
 } */
+
+/* FLOATS */
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.author {
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+article {
+  width: 825px;
+  float: left;
+}
+
+aside {
+  width: 300px;
+  float: right;
+}
+
+footer {
+  clear: both;
+}
