--- a/CSS-Layouts/Flex-Layout/style.css
+++ b/CSS-Layouts/Flex-Layout/style.css
@@ -312,3 +312,24 @@ footer {
   font-weight: normal;
   font-style: italic;
 }
+
+.row {
+  display: flex;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  /* 
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  */
+
+  flex: 0 0 300px;
+}
