--- a/HTML-Challenge/style.css
+++ b/HTML-Challenge/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 /* PRODUCT */
-
 .product {
   border: 4px solid black;
   width: 825px;
@@ -94,16 +93,15 @@ more-info:active {
   text-decoration: none;
 }
 
-.colors {
-  margin-bottom: 0;
+.product-colors {
+  display: flex;
+  gap: 10px;
 }
 
 .color {
   background-color: #000;
   height: 22px;
   width: 22px;
-  display: inline-block;
-  margin-right: 5px;
 }
 
 .color-blue {
