--- a/CSS-Layouts/CSS-Grid/style.css
+++ b/CSS-Layouts/CSS-Grid/style.css
@@ -23,7 +23,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   /* height: 100px; */
 }
 
@@ -33,7 +33,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 .post-header {
   margin-bottom: 40px;
@@ -334,3 +334,25 @@ aside {
   flex: 0 0 300px;
 } 
 */
+
+/* CSS GRID LAYOUT */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+}
+
+.main-header {
+  grid-column: 1 / -1;
+}
+
+article {
+}
+
+aside {
+}
+
+footer {
+  grid-column: 1 / -1;
+}
