--- a/CSS-Layouts/CSS-Grid/style.css
+++ b/CSS-Layouts/CSS-Grid/style.css
@@ -341,18 +341,14 @@ aside {
   grid-template-columns: 1fr 300px;
   column-gap: 75px;
   row-gap: 60px;
+  align-items: flex-start;
 }
 
 .main-header {
   grid-column: 1 / -1;
 }
 
-article {
-}
-
-aside {
-}
-
 footer {
   grid-column: 1 / -1;
+  text-align: center;
 }
