--- a/HTML-Challenge/style.css
+++ b/HTML-Challenge/style.css
@@ -11,6 +11,8 @@ body {
 
 /* PRODUCT */
 .product {
+  display: grid;
+  grid-template-columns: 250px 280px 280px;
   border: 4px solid black;
   width: 825px;
   margin: 50px auto;
@@ -18,6 +20,7 @@ body {
 }
 
 .product-title {
+  grid-column: 1 / -1;
   background-color: rgba(223, 223, 223, 0.897);
   text-align: center;
   font-size: 22px;
@@ -25,10 +28,10 @@ body {
   padding: 15px 0;
 }
 
-.container {
+/* .container {
   display: flex;
   gap: 30px;
-}
+} */
 
 .product-info {
   flex: 1;
@@ -150,6 +153,7 @@ li:last-child {
 
 /* BUTTON */
 .add-cart {
+  grid-column: 1 / -1;
   background-color: black;
   border: none;
   color: #fff;
