found a typography setting that looks good for main header

--- a/Design/style.css
+++ b/Design/style.css
@@ -13,7 +13,7 @@ FONT SIZE SYSTEM (px)
 }
 
 /* ------------------------ */
-/* GENERAL STYLES */
+/* GENERAL STYLES / REUSABLE */
 /* ------------------------ */
 body {
   font-family: "Inter", sans-serif;
@@ -31,6 +31,8 @@ section {
 
 h2 {
   margin-bottom: 48px;
+  font-size: 36px;
+  /* 24 / 30 / 36 */
 }
 
 .grid-3-cols {
@@ -57,10 +59,15 @@ header {
 
 h1 {
   margin-bottom: 24px;
+  font-size: 44px;
+  line-height: 1.1;
+  letter-spacing: -1px;
 }
 
 .header-text {
   margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 1.6;
 }
 
 img {
