--- a/Design/style.css
+++ b/Design/style.css
@@ -32,6 +32,7 @@ section {
 h2 {
   margin-bottom: 48px;
   font-size: 36px;
+  letter-spacing: -0.5px;
   /* 24 / 30 / 36 */
 }
 
@@ -67,7 +68,7 @@ h1 {
 .header-text {
   margin-bottom: 24px;
   font-size: 18px;
-  line-height: 1.6;
+  line-height: 1.7;
 }
 
 img {
@@ -80,9 +81,12 @@ img {
 
 .features-title {
   margin-bottom: 16px;
+  font-size: 20px;
 }
 
 .features-text {
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 /* TESTIMONIAL */
