--- a/Design/style.css
+++ b/Design/style.css
@@ -99,12 +99,16 @@ img {
 }
 
 .testimonial-box h2 {
+  /* 20 / 24 / 30 */
   margin-bottom: 24px;
+  font-size: 24px;
 }
 
 .testimonial-text {
   font-style: italic;
   margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 /* CHAIRS */
@@ -114,6 +118,7 @@ img {
 
 h3 {
   margin-bottom: 24px;
+  font-size: 20px;
 }
 
 .chair-details {
@@ -138,8 +143,11 @@ h3 {
 .chair-price {
   display: flex;
   justify-content: space-between;
+  font-size: 20px;
 }
 
 footer {
+  /* 12 / 14 / 16 */
   margin-bottom: 48px;
+  font-size: 14px;
 }
