--- a/Design/style.css
+++ b/Design/style.css
@@ -5,6 +5,10 @@ SPACING SYSTEM (px)
 FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
+/* 
+MAIN COLOR: #087f5b
+GREY COLOR: #343a40
+*/
 
 * {
   margin: 0;
@@ -17,6 +21,7 @@ FONT SIZE SYSTEM (px)
 /* ------------------------ */
 body {
   font-family: "Inter", sans-serif;
+  color: #343a40;
 }
 
 .container {
@@ -40,6 +45,17 @@ h2 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 80px;
+}
+
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 16px 32px;
+  display: inline-block;
 }
 
 /* ------------------------ */
