--- a/Design/style.css
+++ b/Design/style.css
@@ -54,8 +54,20 @@ h2 {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 500;
-  padding: 16px 32px;
   display: inline-block;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
+
+.btn--big {
+  font-size: 18px;
+  padding: 16px 32px;
+}
+
+.btn--small {
 }
 
 /* ------------------------ */
