--- a/Design/style.css
+++ b/Design/style.css
@@ -5,6 +5,11 @@ SPACING SYSTEM (px)
 FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
+
+/* 
+
+*/
+
 /* 
 MAIN COLOR: #087f5b
 GREY COLOR: #343a40
@@ -108,6 +113,10 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
