--- a/Design/style.css
+++ b/Design/style.css
@@ -99,6 +99,8 @@ h1 {
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
+
+  /* text-shadow: 0 20px 5px rgba(0, 0, 0, 0.07); */
 }
 
 .header-text {
