--- a/Components/Accordion/01-accordion.html
+++ b/Components/Accordion/01-accordion.html
@@ -40,13 +40,43 @@
       .accordion {
         width: 700px;
         margin: 100px auto;
-        background-color: #343a40;
       }
     </style>
 
     <title>Accordion Component</title>
   </head>
   <body>
-    <div class="accordion">Testß</div>
+    <div class="accordion">
+      <div class="item">
+        <p class="number">02</p>
+        <p class="text">How long do I have to return my chair?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M19 9l-7 7-7-7"
+          />
+        </svg>
+        <div class="hidden">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Doloremque, accusamus! Facilis animi cum corporis corrupti?
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
