styling inner text and lists

--- a/Components/Accordion/01-accordion.html
+++ b/Components/Accordion/01-accordion.html
@@ -41,6 +41,44 @@
         width: 700px;
         margin: 100px auto;
       }
+
+      .item {
+      }
+
+      .number,
+      .text {
+        font-size: 24px;
+        font-weight: 500;
+        color: #087f5b;
+      }
+
+      .icon {
+        width: 24px;
+        height: 24px;
+        stroke: #087f5b;
+      }
+
+      .hidden {
+      }
+
+      .hidden p {
+        line-height: 1.6;
+        margin-bottom: 24px;
+      }
+
+      .hidden ul {
+        color: #868e96;
+        margin-left: 18px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      /* 
+      .hidden li {
+        margin-bottom: 12px;
+      } 
+      */
     </style>
 
     <title>Accordion Component</title>
