--- a/Components/Accordion/01-accordion.html
+++ b/Components/Accordion/01-accordion.html
@@ -60,7 +60,11 @@
       .text {
         font-size: 24px;
         font-weight: 500;
-        color: #087f5b;
+        /* color: #087f5b; */
+      }
+
+      .number {
+        color: #ced4da;
       }
 
       .icon {
@@ -71,6 +75,7 @@
 
       .hidden {
         grid-column: 2;
+        display: none;
       }
 
       .hidden p {
@@ -84,6 +89,14 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+      }
+
+      .open {
+        border-top: 4px solid #087f5b;
+      }
+
+      .open .hidden {
+        display: block;
       }
     </style>
 
@@ -122,7 +135,7 @@
         </div>
       </div>
 
-      <div class="item">
+      <div class="item open">
         <p class="number">02</p>
         <p class="text">How long do I have to return my chair?</p>
         <svg
