fixed the color for an open pull down menu

--- a/Components/Accordion/01-accordion.html
+++ b/Components/Accordion/01-accordion.html
@@ -98,6 +98,11 @@
       .open .hidden {
         display: block;
       }
+
+      .open .number,
+      .open .text {
+        color: #087f5b;
+      }
     </style>
 
     <title>Accordion Component</title>
