--- a/Components/Accordion/01-accordion.html
+++ b/Components/Accordion/01-accordion.html
@@ -95,6 +95,7 @@
         border-top: 4px solid #087f5b;
       }
 
+      /* This opens the content */
       .open .hidden {
         display: block;
       }
@@ -140,6 +141,7 @@
         </div>
       </div>
 
+      <!-- Applying open to the class will expand the contents -->
       <div class="item open">
         <p class="number">02</p>
         <p class="text">How long do I have to return my chair?</p>
