--- a/Components/carousel/carousel.html
+++ b/Components/carousel/carousel.html
@@ -35,6 +35,7 @@
       body {
         font-family: "Inter", sans-serif;
         color: #343a40;
+        line-height: 1;
       }
 
       .carousel {
@@ -44,6 +45,7 @@
         padding: 32px;
         padding-left: 86px;
         border-radius: 8px;
+        position: relative;
 
         display: flex;
         align-items: center;
@@ -78,6 +80,26 @@
         font-size: 12px;
         color: #c3fae8;
       }
+
+      /* CONTROLS */
+      .btn {
+        background-color: #fff;
+        border: none;
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        position: absolute;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .btn-icon {
+        height: 24px;
+        width: 24px;
+        stroke: #087f5b;
+      }
     </style>
 
     <title>Carousel Component</title>
@@ -94,10 +116,10 @@
         <p class="testimonial-author">Maria de Almeida</p>
         <p class="testimonial-job">Senior Product Manager at EDP Comercial</p>
       </blockquote>
-      <!-- <button class="btn">
+      <button class="btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
+          class="btn-icon"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -113,7 +135,7 @@
       <button class="btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
+          class="btn-icon"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -125,7 +147,7 @@
             d="M9 5l7 7-7 7"
           />
         </svg>
-      </button> -->
+      </button>
     </div>
   </body>
 </html>
