buttons now however off the carousel to give effect

--- a/Components/carousel/carousel.html
+++ b/Components/carousel/carousel.html
@@ -89,6 +89,7 @@
         width: 40px;
         border-radius: 50%;
         position: absolute;
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
 
         display: flex;
         align-items: center;
@@ -101,7 +102,7 @@
         /* center-left within parent */
         /* without using align-items: center */
         top: 50%;
-        transform: translate(0, -50%);
+        transform: translate(-50%, -50%);
       }
 
       .btn--right {
@@ -110,7 +111,7 @@
         /* center-right within parent */
         /* without using align-items: center */
         top: 50%;
-        transform: translate(0, -50%);
+        transform: translate(50%, -50%);
       }
 
       .btn-icon {
