aligned text and buttons change cursor now

--- a/Components/carousel/carousel.html
+++ b/Components/carousel/carousel.html
@@ -48,7 +48,7 @@
         position: relative;
 
         display: flex;
-        /* align-items: center; */
+        align-items: center;
         gap: 86px;
       }
 
@@ -90,6 +90,7 @@
         border-radius: 50%;
         position: absolute;
         box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
 
         display: flex;
         align-items: center;
