adding the paginatin visual below testimonial

--- a/Components/carousel/carousel.html
+++ b/Components/carousel/carousel.html
@@ -120,6 +120,14 @@
         width: 24px;
         stroke: #087f5b;
       }
+
+      .dots {
+      }
+
+      .dot {
+        height: 12px;
+        width: 12px;
+      }
     </style>
 
     <title>Carousel Component</title>
@@ -168,6 +176,12 @@
           />
         </svg>
       </button>
+      <div class="dots">
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+      </div>
     </div>
   </body>
 </html>
