styled buttons to be round

--- a/Components/carousel/carousel.html
+++ b/Components/carousel/carousel.html
@@ -122,11 +122,17 @@
       }
 
       .dots {
+        position: absolute;
+        left: 50%;
       }
 
       .dot {
         height: 12px;
         width: 12px;
+        background-color: #fff;
+        border: 2px solid #087f5b;
+        border-radius: 50%;
+        cursor: pointer;
       }
     </style>
 
