--- a/Components/carousel/carousel.html
+++ b/Components/carousel/carousel.html
@@ -124,6 +124,11 @@
       .dots {
         position: absolute;
         left: 50%;
+        bottom: 0;
+        transform: translate(-50%, 32px);
+
+        display: flex;
+        gap: 12px;
       }
 
       .dot {
@@ -133,6 +138,10 @@
         border: 2px solid #087f5b;
         border-radius: 50%;
         cursor: pointer;
+      }
+
+      .dot--fill {
+        background-color: #087f5b;
       }
     </style>
 
@@ -183,7 +192,7 @@
         </svg>
       </button>
       <div class="dots">
-        <button class="dot">&nbsp;</button>
+        <button class="dot dot--fill">&nbsp;</button>
         <button class="dot">&nbsp;</button>
         <button class="dot">&nbsp;</button>
         <button class="dot">&nbsp;</button>
