--- a/Components/carousel/carousel.html
+++ b/Components/carousel/carousel.html
@@ -42,8 +42,7 @@
         width: 800px;
         margin: 100px auto;
         background-color: #087f5b;
-        padding: 32px;
-        padding-left: 86px;
+        padding: 32px 48px 32px 86px;
         border-radius: 8px;
         position: relative;
 
@@ -154,7 +153,7 @@
         <p class="testimonial-text">
           "Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos ea
           corrupti facilis. Non suscipit voluptatem eaque placeat quis debitis
-          vero dolorem omnis quidem consequatur!""
+          vero dolorem omnis quidem consequatur!"
         </p>
         <p class="testimonial-author">Maria de Almeida</p>
         <p class="testimonial-job">Senior Product Manager at EDP Comercial</p>
