--- a/Components/table/table.html
+++ b/Components/table/table.html
@@ -34,6 +34,28 @@
       body {
         font-family: "Inter", sans-serif;
         color: #343a40;
+        line-height: 1;
+        display: flex;
+        justify-content: center;
+      }
+
+      table {
+        width: 800px;
+        margin-top: 100px;
+        border: 1px solid #343a40;
+
+        /* two borders collapsed into one */
+        border-collapse: collapse;
+
+        /* one way to center element */
+        /* margin: 0 auto; */
+      }
+
+      th,
+      td {
+        border: 1px solid #343a40;
+        padding: 16px 24px;
+        text-align: left;
       }
     </style>
     <title>Table Component</title>
