--- a/Components/table/table.html
+++ b/Components/table/table.html
@@ -42,7 +42,8 @@
       table {
         width: 800px;
         margin-top: 100px;
-        border: 1px solid #343a40;
+        font-size: 18px;
+        /* border: 1px solid #343a40; */
 
         /* two borders collapsed into one */
         border-collapse: collapse;
@@ -53,9 +54,23 @@
 
       th,
       td {
-        border: 1px solid #343a40;
+        /* border: 1px solid #343a40; */
         padding: 16px 24px;
         text-align: left;
+      }
+
+      thead th {
+        background-color: #087f5b;
+        color: #fff;
+        width: 25%;
+      }
+
+      tbody tr:nth-child(even) {
+        background-color: lightgrey;
+      }
+
+      tbody tr:nth-child(odd) {
+        background-color: grey;
       }
     </style>
     <title>Table Component</title>
