--- a/Components/table/table.html
+++ b/Components/table/table.html
@@ -65,12 +65,12 @@
         width: 25%;
       }
 
-      tbody tr:nth-child(even) {
-        background-color: lightgrey;
+      tbody tr:nth-child(odd) {
+        background-color: #f8f9fa;
       }
 
-      tbody tr:nth-child(odd) {
-        background-color: grey;
+      tbody tr:nth-child(even) {
+        background-color: #e9ecef;
       }
     </style>
     <title>Table Component</title>
