--- a/Components/pagination.html
+++ b/Components/pagination.html
@@ -34,6 +34,46 @@
       body {
         font-family: "Inter", sans-serif;
         color: #343a40;
+        line-height: 1;
+      }
+
+      .pages {
+        width: 800px;
+        margin: 100px auto;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+      }
+
+      .btn {
+        background-color: #fff;
+        border: 1px solid #087f5b;
+        border-radius: 50%;
+        height: 40px;
+        width: 40px;
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .btn-icon {
+        height: 24px;
+        width: 24px;
+        stroke: #087f5b;
+      }
+
+      a:first-child {
+        margin-left: 25px;
+      }
+
+      .link {
+        color: black;
+        text-decoration: none;
       }
     </style>
     <title>Pagination Component</title>
@@ -56,6 +96,14 @@
           />
         </svg>
       </button>
+      <a class="link" href="#">1</a>
+      <a class="link" href="#">2</a>
+      <a class="link" href="#">3</a>
+      <a class="link" href="#">4</a>
+      <a class="link" href="#">5</a>
+      <a class="link" href="#">6</a>
+      <span>...</span>
+      <a class="link" href="#">23</a>
       <button class="btn btn--right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
