added selected color on certain page

--- a/Components/pagination.html
+++ b/Components/pagination.html
@@ -67,13 +67,14 @@
         stroke: #087f5b;
       }
 
-      a:first-child {
-        margin-left: 25px;
-      }
-
       .link {
+        font-weight: 400;
         color: black;
         text-decoration: none;
+      }
+
+      .selected {
+        background-color: #087f5b;
       }
     </style>
     <title>Pagination Component</title>
@@ -96,7 +97,7 @@
           />
         </svg>
       </button>
-      <a class="link" href="#">1</a>
+      <a class="link selected" href="#">1</a>
       <a class="link" href="#">2</a>
       <a class="link" href="#">3</a>
       <a class="link" href="#">4</a>
