--- a/Components/pagination.html
+++ b/Components/pagination.html
@@ -44,7 +44,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 30px;
+        gap: 8px;
       }
 
       .btn {
@@ -71,10 +71,13 @@
         font-weight: 400;
         color: black;
         text-decoration: none;
+        padding: 12px;
+        border-radius: 50%;
       }
 
       .selected {
         background-color: #087f5b;
+        color: #fff;
       }
     </style>
     <title>Pagination Component</title>
