--- a/Components/pagination.html
+++ b/Components/pagination.html
@@ -51,8 +51,8 @@
         background-color: #fff;
         border: 1px solid #087f5b;
         border-radius: 50%;
-        height: 40px;
-        width: 40px;
+        height: 48px;
+        width: 48px;
         box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         cursor: pointer;
 
@@ -67,18 +67,34 @@
         stroke: #087f5b;
       }
 
-      .link {
-        font-weight: 400;
-        color: black;
+      .page-link:link,
+      .page-link:visited {
+        font-size: 18px;
+        color: #343a40;
         text-decoration: none;
-        padding: 12px;
-        border-radius: 50%;
+        background-color: red;
+        height: 36px;
+        width: 36px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* padding: 12px;
+        border-radius: 50%; */
       }
 
-      .selected {
+      .page-link:hover,
+      .page-link:active {
         background-color: #087f5b;
         color: #fff;
       }
+
+      .dots {
+      }
+
+      /* .selected {
+        background-color: #087f5b;
+        color: #fff;
+      } */
     </style>
     <title>Pagination Component</title>
   </head>
@@ -100,14 +116,14 @@
           />
         </svg>
       </button>
-      <a class="link selected" href="#">1</a>
-      <a class="link" href="#">2</a>
-      <a class="link" href="#">3</a>
-      <a class="link" href="#">4</a>
-      <a class="link" href="#">5</a>
-      <a class="link" href="#">6</a>
-      <span>...</span>
-      <a class="link" href="#">23</a>
+      <a class="page-link selected" href="#">1</a>
+      <a class="page-link" href="#">2</a>
+      <a class="page-link" href="#">3</a>
+      <a class="page-link" href="#">4</a>
+      <a class="page-link" href="#">5</a>
+      <a class="page-link" href="#">6</a>
+      <span class="dots">...</span>
+      <a class="page-link" href="#">23</a>
       <button class="btn btn--right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
