--- a/Components/pagination.html
+++ b/Components/pagination.html
@@ -61,6 +61,14 @@
         align-items: center;
       }
 
+      .btn:hover {
+        background-color: #087f5b;
+      }
+
+      .btn:hover .btn-icon {
+        stroke: #fff;
+      }
+
       .btn-icon {
         height: 24px;
         width: 24px;
@@ -72,14 +80,12 @@
         font-size: 18px;
         color: #343a40;
         text-decoration: none;
-        background-color: red;
         height: 36px;
         width: 36px;
+        border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
-        /* padding: 12px;
-        border-radius: 50%; */
       }
 
       .page-link:hover,
