added selected to the pagination for the current page and fixed directory pathf or imgs

--- a/Components/carousel.html
+++ b/Components/carousel.html
@@ -148,7 +148,7 @@
   </head>
   <body>
     <div class="carousel">
-      <img src="../img/maria.jpg" alt="Maria de Almeida" />
+      <img src="./img/maria.jpg" alt="Maria de Almeida" />
       <blockquote class="testimonial">
         <p class="testimonial-text">
           "Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos ea
