--- a/Components/pagination.html
+++ b/Components/pagination.html
@@ -97,10 +97,10 @@
       .dots {
       }
 
-      /* .selected {
+      .selected {
         background-color: #087f5b;
         color: #fff;
-      } */
+      }
     </style>
     <title>Pagination Component</title>
   </head>
