--- a/Components/hero.html
+++ b/Components/hero.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hero Component</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
     <style>
       /*
       SPACING SYSTEM (px)
@@ -32,11 +37,40 @@
       /* GENERAL STYLES / REUSABLE */
       /* ------------------------ */
       body {
-        font-family: "Inter", sans-serif;
-        color: #343a40;
+        font-family: "Rubik", sans-serif;
+        color: #444;
+        line-height: 1;
       }
     </style>
-    <title>Hero Section Component</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div>LOGO</div>
+        <div>NAVIGATION</div>
+      </nav>
+
+      <div>
+        <h1>A healthy meal delivered to your door every single day.</h1>
+        <p>
+          The smart 365-days-per-year food subscription that will make you eat
+          healthy again. Tailored to your personal tastes and nutritional needs.
+        </p>
+        <a href="#">Start eating well</a>
+      </div>
+    </header>
+
+    <section>
+      <div>
+        <h2>Some random heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+          autem minus veritatis similique amet natus quasi eius aut nam! Animi
+          illum assumenda perferendis, corrupti sed totam quasi eligendi dolorem
+          officia magni sunt voluptas quidem laborum tenetur, cumque quis a
+          minima.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
