adding some styling to nav and headers

--- a/Components/hero.html
+++ b/Components/hero.html
@@ -27,11 +27,11 @@
       GREY COLOR: #343a40
       */
 
-      * {
+      /* * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-      }
+      } */
 
       /* ------------------------ */
       /* GENERAL STYLES / REUSABLE */
@@ -40,6 +40,24 @@
         font-family: "Rubik", sans-serif;
         color: #444;
         line-height: 1;
+      }
+
+      nav {
+        font-size: 20px;
+        font-weight: 700;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      h1 {
+        font-size: 52px;
+        margin-bottom: 32px;
+      }
+
+      p {
+        font-size: 20px;
+        line-height: 1.6;
+        margin-bottom: 48px;
       }
     </style>
   </head>
