--- a/Components/hero.html
+++ b/Components/hero.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -59,6 +59,15 @@
         line-height: 1.6;
         margin-bottom: 48px;
       }
+
+      .btn:link,
+      .btn:visited {
+        font-size: 20px;
+        font-weight: 600;
+        background-color: #e67e22;
+        color: #fff;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -74,7 +83,7 @@
           The smart 365-days-per-year food subscription that will make you eat
           healthy again. Tailored to your personal tastes and nutritional needs.
         </p>
-        <a href="#">Start eating well</a>
+        <a href="#" class="btn">Start eating well</a>
       </div>
     </header>
 
