--- a/Components/hero.html
+++ b/Components/hero.html
@@ -67,6 +67,18 @@
         background-color: #e67e22;
         color: #fff;
         text-decoration: none;
+        display: inline-block;
+        padding: 16px 32px;
+        border-radius: 9px;
+      }
+
+      h2 {
+        font-size: 44px;
+        margin-bottom: 48px;
+      }
+
+      section {
+        padding: 96px 0;
       }
     </style>
   </head>
