--- a/Components/hero.html
+++ b/Components/hero.html
@@ -27,11 +27,11 @@
       GREY COLOR: #343a40
       */
 
-      /* * {
+      * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-      } */
+      }
 
       /* ------------------------ */
       /* GENERAL STYLES / REUSABLE */
@@ -42,11 +42,22 @@
         line-height: 1;
       }
 
+      .container {
+        margin: 0 auto;
+        width: 1200px;
+      }
+
+      header {
+        background-color: orangered;
+        height: 100vh;
+      }
+
       nav {
         font-size: 20px;
         font-weight: 700;
         display: flex;
         justify-content: space-between;
+        background-color: green;
       }
 
       h1 {
@@ -79,17 +90,18 @@
 
       section {
         padding: 96px 0;
+        background-color: #f7f7f7;
       }
     </style>
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="container">
         <div>LOGO</div>
         <div>NAVIGATION</div>
       </nav>
 
-      <div>
+      <div class="container">
         <h1>A healthy meal delivered to your door every single day.</h1>
         <p>
           The smart 365-days-per-year food subscription that will make you eat
@@ -100,7 +112,7 @@
     </header>
 
     <section>
-      <div>
+      <div class="container">
         <h2>Some random heading</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
