removed color for visualizing and adding picture

--- a/Components/hero.html
+++ b/Components/hero.html
@@ -48,13 +48,13 @@
       }
 
       header {
-        background-color: orangered;
         height: 100vh;
         position: relative;
+
+        background-image: url("./img/hero.jpg");
       }
 
       .header-container {
-        background-color: pink;
         width: 1200px;
         position: absolute;
 
@@ -68,7 +68,6 @@
 
       .header-container-inner {
         width: 50%;
-        background-color: white;
       }
 
       nav {
@@ -76,12 +75,12 @@
         font-weight: 700;
         display: flex;
         justify-content: space-between;
-        background-color: green;
       }
 
       h1 {
         font-size: 52px;
         margin-bottom: 32px;
+        line-height: 1.05;
       }
 
       p {
