--- a/Components/app-layout/app-layout.html
+++ b/Components/app-layout/app-layout.html
@@ -7,5 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
     <title>App Layout</title>
   </head>
-  <body></body>
+  <body>
+    <nav>Nav</nav>
+    <menu>Menu</menu>
+    <section>Inbox</section>
+    <main>Email View</main>
+    <aside>Additional Info</aside>
+  </body>
 </html>
