added a comment to remind you the purpose of overflow

--- a/Components/app-layout/style.css
+++ b/Components/app-layout/style.css
@@ -59,6 +59,9 @@ section {
   background-color: #e9ecef;
   padding: 40px;
 
+  /* 
+    How elements don't fit into container appear 
+  */
   overflow: scroll;
 
   display: flex;
